@@ -1,3 +1,6 @@
+beta 4
+======
+- Brought ActiveRecordMediator.Generic inline with ActiveRecordMediator.  This is a breaking change (removal of a few methods/renaming of a few existing).
 
 beta 3
 ======
